Validate stat on various operations